generated/checkers/refine/KN-Integer-Overflow-768f17fd-0/build_logs/syntax-repair-refine-0-3/build_stderr_1.log
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/PathSensitive/RangedConstraintManager.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporterVisitors.h:19,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:21,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/PathSensitive/ProgramStateTrait.h:42:10: error: specialization of ‘template<class T> struct clang::ento::ProgramStateTrait’ in different namespace [-fpermissive]
   42 |   struct ProgramStateTrait<Name> : public ProgramStatePartialTrait<Name##Ty> { \
      |          ^~~~~~~~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/PathSensitive/ProgramStateTrait.h:42:10: note: in definition of macro ‘REGISTER_TRAIT_WITH_PROGRAMSTATE’
   42 |   struct ProgramStateTrait<Name> : public ProgramStatePartialTrait<Name##Ty> { \
      |          ^~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:40:1: note: in expansion of macro ‘REGISTER_SET_WITH_PROGRAMSTATE’
   40 | REGISTER_SET_WITH_PROGRAMSTATE(Reg32Vars, const MemRegion *)
      | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/PathSensitive/RangedConstraintManager.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporterVisitors.h:19,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:21,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/PathSensitive/ProgramState.h:51:30: note:   from definition of ‘template<class T> struct clang::ento::ProgramStateTrait’
   51 | template <typename T> struct ProgramStateTrait {
      |                              ^~~~~~~~~~~~~~~~~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/PathSensitive/RangedConstraintManager.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporterVisitors.h:19,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:21,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/PathSensitive/ProgramStateTrait.h:42:10: error: explicit specialization of ‘template<class T> struct clang::ento::ProgramStateTrait’ outside its namespace must use a nested-name-specifier [-fpermissive]
   42 |   struct ProgramStateTrait<Name> : public ProgramStatePartialTrait<Name##Ty> { \
      |          ^~~~~~~~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/PathSensitive/ProgramStateTrait.h:42:10: note: in definition of macro ‘REGISTER_TRAIT_WITH_PROGRAMSTATE’
   42 |   struct ProgramStateTrait<Name> : public ProgramStatePartialTrait<Name##Ty> { \
      |          ^~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:40:1: note: in expansion of macro ‘REGISTER_SET_WITH_PROGRAMSTATE’
   40 | REGISTER_SET_WITH_PROGRAMSTATE(Reg32Vars, const MemRegion *)
      | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/PathSensitive/ProgramStateTrait.h:43:27: error: definition of ‘static void* clang::ento::ProgramStateTrait<{anonymous}::{anonymous}::Reg32Vars>::GDMIndex()’ is not in namespace enclosing ‘clang::ento::ProgramStateTrait<{anonymous}::{anonymous}::Reg32Vars>’ [-fpermissive]
   43 |     static void *GDMIndex() {                                                  \
      |                           ^
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/PathSensitive/ProgramStateTrait.h:113:5: note: in expansion of macro ‘REGISTER_TRAIT_WITH_PROGRAMSTATE’
  113 |     REGISTER_TRAIT_WITH_PROGRAMSTATE(Name, llvm::ImmutableSet<Elem>)
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:40:1: note: in expansion of macro ‘REGISTER_SET_WITH_PROGRAMSTATE’
   40 | REGISTER_SET_WITH_PROGRAMSTATE(Reg32Vars, const MemRegion *)
      | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkPostStmt(const clang::DeclStmt*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:302:38: error: ‘class clang::ento::SValBuilder’ has no member named ‘getLValue’; did you mean ‘getMinValue’?
  302 |         SVal LV = C.getSValBuilder().getLValue(VD, C.getLocationContext());
      |                                      ^~~~~~~~~
      |                                      getMinValue
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:29772: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:29779: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
